--- a/examples/index.html
+++ b/examples/index.html
@@ -90,5 +90,13 @@
 				<div class="grid-item">.vapor-1-3</div>
 			</div>
 		</div>
+
+		<h2 class="section">Windows</h2>
+		<div class="window">
+			<div class="header">u wot m9</div>
+			<div class="content">
+				helu there bb
+			</div>
+		</div>
 	</body>
 </html>
