--- a/demo/index.html
+++ b/demo/index.html
@@ -3,11 +3,12 @@
     <title>Sample</title>
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css'>
+    <link rel='stylesheet' href='vaporwave.css'>
     <link rel='stylesheet' href='win98.css'>
     <link rel='stylesheet' href='demo.css'>
   </head>
 
-  <body class='win98'>
+  <body class='win98 palm-trees'>
     <br/>
 
     <div class='resizable window'>
