--- a/demo/index.html
+++ b/demo/index.html
@@ -7,62 +7,71 @@
     <link rel='stylesheet' href='demo.css'>
   </head>
 
-  <body class='win98'>
-    <br/>
+  <body>
+    <div class="vaporwave windows">
+      <div class='resizable window'>
+        <div class='header'>
+          <img class='icon' src='icons/txt.gif'/>
+          Untitled - Notepad
+          <div class='buttons'>
+            <button>_</button>
+            <button>&#x25FD;</button>
+            <button>X</button>
+          </div>
+        </div>
 
-    <div class='resizable window'>
-      <div class='header'>
-        <img class='icon' src='icons/txt.gif'/>
-        Untitled - Notepad
-        <div class='buttons'>
-          <button>_</button>
-          <button>&#x25FD;</button>
-          <button>X</button>
+        <div class='content'>
+          <center>
+            <h3>R U OK?</h3>
+            <p></p>
+            <button>OK</button>
+            <button>Cancel</button>
+          </center>
         </div>
       </div>
+      <br/><br/>
 
-      <div class='content'>
-        <center>
-          <h3>R U OK?</h3>
-          <p></p>
-          <button>OK</button>
-          <button>Cancel</button>
-        </center>
+      <div class='window'>
+        <div class='header'>
+          <img class='icon' src='icons/exe.gif'/>
+          Fire Virus Control Wizard
+        </div>
+
+        <div class='content'>
+          <center>
+            <h3>YOU HAVE BEEN INFECTED!</h3>
+            <p>Click to fix your computer NOW</p>
+
+            <button>Start Scan</button>
+          </center>
+        </div>
+      </div>
+      <br/><br/>
+
+      <div class='window'>
+        <div class='header'>
+          <img class='icon' src='icons/exe.gif'/>
+          yo.exe
+        </div>
+
+        <div class='content'>
+          <p>You got a yo from thedude92</p>
+          <center>
+            <button>Say YO</button>
+            <button disabled>Say NO</button>
+          </center>
+        </div>
       </div>
     </div>
-    <br/><br/>
 
-    <div class='window'>
-      <div class='header'>
-        <img class='icon' src='icons/exe.gif'/>
-        Fire Virus Control Wizard
-      </div>
+    <div class="vaporwave">
+      <h3 class="section">a section</h3>
 
-      <div class='content'>
-        <center>
-          <h3>YOU HAVE BEEN INFECTED!</h3>
-          <p>Click to fix your computer NOW</p>
-
-          <button>Start Scan</button>
-        </center>
-      </div>
     </div>
-    <br/><br/>
 
-    <div class='window'>
-      <div class='header'>
-        <img class='icon' src='icons/exe.gif'/>
-        yo.exe
-      </div>
 
-      <div class='content'>
-        <p>You got a yo from thedude92</p>
-        <center>
-          <button>Say YO</button>
-          <button disabled>Say NO</button>
-        </center>
-      </div>
-    </div>
+
+
 
   </body>
 </html>
