--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='demo.css'>
   </head>
 
-  <body class='win98 palm-trees'>
+  <body class='win98 palm-trees water'>
     <br/>
 
     <div class='resizable window'>
