--- a/demo/index.html
+++ b/demo/index.html
@@ -62,14 +62,14 @@
           </center>
         </div>
       </div>
-    </div>
 
-    <div class="vaporwave container">
+
+    </div>
+      
+    <div class="container">
       <h3 class="section">a section</h3>
 
     </div>
-
-
 
 
 
