--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="vaporwave windows palm-trees water">
+    <div class='vaporwave windows palm-trees water'>
       <div class='resizable window'>
         <div class='header'>
           <img class='icon' src='icons/txt.gif'/>
@@ -65,8 +65,8 @@
 
     </div>
       
-    <div class="container">
-      <h3 class="section">a section</h3>
+    <div class='container'>
+      <h3 class='section'>a section</h3>
 
     </div>
 
