--- a/demo/index.html
+++ b/demo/index.html
@@ -66,7 +66,7 @@
     </div>
       
     <div class="container">
-      <h3 class="section">a section</h3>
+      <h3 class="section">A section</h3>
 
     </div>
 
