--- a/demo/index.html
+++ b/demo/index.html
@@ -64,7 +64,7 @@
       </div>
 
     </div>
-      
+    <div class='divider'></div>
     <div class='container'>
       <h3 class='section'>a section</h3>
 
