--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <div class='vaporwave windows palm-trees water'>
+      <br/><br/>
       <div class='resizable window'>
         <div class='header'>
           <img class='icon' src='icons/txt.gif'/>
@@ -47,7 +48,10 @@
         </div>
       </div>
       <br/><br/>
+    </div>
 
+    <div class='vaporwave windows columns'>
+      <br/><br/>
       <div class='window'>
         <div class='header'>
           <img class='icon' src='icons/exe.gif'/>
@@ -62,9 +66,9 @@
           </center>
         </div>
       </div>
-
+      <br/><br/>
     </div>
-    <div class='divider'></div>
+    <!--<div class='divider'></div>-->
     <div class='container'>
       <h3 class='section'>a section</h3>
 
