--- a/demo/index.html
+++ b/demo/index.html
@@ -50,7 +50,7 @@
       <br/><br/>
     </div>
 
-    <div class='vaporwave windows columns'>
+    <div class='vaporwave windows white-marble columns'>
       <br/><br/>
       <div class='window'>
         <div class='header'>
