--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class='vaporwave windows palm-trees water'>
+    <div class='vaporwave palm-trees water example'>
       <div class='resizable window'>
         <div class='header'>
           <img class='icon' src='icons/txt.gif'/>
@@ -66,8 +66,24 @@
     </div>
       
     <div class='divider'></div>
-    <div class="container">
-      <h3 class="section">A section</h3>
+
+    <div class="example">
+
+      <div class="container">
+        <h3 class="section">A section</h3>
+        <p>
+          add the .section class to an h element
+        </p>
+      </div>
+    </div>
+
+    <div class="example water dolphins">
+      <div class="container">
+        <h3 class="section">dolphins</h3>
+        <p>
+          add the .dolphins class to an element
+        </p>
+      </div>
 
     </div>
 
