--- a/demo/index.html
+++ b/demo/index.html
@@ -88,10 +88,17 @@
           add the .dolphins class to an element
         </p>
       </div>
-
-
     </div>
 
+
+    <div class="example">
+      <div class="container bevel">
+        <h3 class="section">bevels</h3>
+        <p>
+          add the .bevel class to an element
+        </p>
+      </div>
+    </div>
 
   </body>
 </html>
