--- a/demo/index.html
+++ b/demo/index.html
@@ -10,54 +10,27 @@
 
   <body>
     <div class='vaporwave palm-trees water example'>
-      <br/><br/>
-      <div class='resizable window'>
-        <div class='header'>
-          <img class='icon' src='icons/txt.gif'/>
-          Untitled - Notepad
-          <div class='buttons'>
-            <button>_</button>
-            <button>&#x25FD;</button>
-            <button>X</button>
-          </div>
-        </div>
-        <div class='content'>
-          <center>
-            <h3>R U OK?</h3>
-            <p></p>
-            <button>OK</button>
-            <button>Cancel</button>
-          </center>
-        </div>
-      </div>
-      <br/><br/>
-
-      <div class='window'>
+      <div class='resizable window center-it'>
         <div class='header'>
           <img class='icon' src='icons/exe.gif'/>
           Fire Virus Control Wizard
         </div>
-
         <div class='content'>
           <center>
             <h3>YOU HAVE BEEN INFECTED!</h3>
             <p>Click to fix your computer NOW</p>
-
             <button>Start Scan</button>
           </center>
         </div>
       </div>
-      <br/><br/>
     </div>
 
     <div class='vaporwave windows white-marble columns'>
-      <br/><br/>
-      <div class='window'>
+      <div class='window center-it'>
         <div class='header'>
           <img class='icon' src='icons/exe.gif'/>
           yo.exe
         </div>
-
         <div class='content'>
           <p>You got a yo from thedude92</p>
           <center>
@@ -66,24 +39,20 @@
           </center>
         </div>
       </div>
-      <br/><br/>
     </div>
 
-    <div class='divider'></div>
-
-    <div class="example">
-
-      <div class="container">
-        <h3 class="section">A section</h3>
+    <div class='example'>
+      <div class='container'>
+        <h3 class='section'>A section</h3>
         <p>
           add the .section class to an h element
         </p>
       </div>
     </div>
 
-    <div class="example water dolphins">
-      <div class="container">
-        <h3 class="section">dolphins</h3>
+    <div class='example water dolphins'>
+      <div class='container'>
+        <h3 class='section'>dolphins</h3>
         <p>
           add the .dolphins class to an element
         </p>
@@ -91,9 +60,9 @@
     </div>
 
 
-    <div class="example">
-      <div class="container bevel">
-        <h3 class="section">bevels</h3>
+    <div class='example'>
+      <div class='container bevel'>
+        <h3 class='section'>bevels</h3>
         <p>
           add the .bevel class to an element
         </p>
