statues, backgrounds, lists

--- a/demo/index.html
+++ b/demo/index.html
@@ -81,11 +81,18 @@
       </div>
     </div>
 
-    <div class="example water dolphins">
+    <div class="example water statues">
       <div class="container">
-        <h3 class="section">dolphins</h3>
+        <h3 class="section">background decorations</h3>
         <p>
-          add the .dolphins class to an element
+          these classes can be added to an element to decorate it
+
+          <ul>
+            <li>.palm-trees</li>
+            <li>.dolphins</li>
+            <li>.columns</li>
+            <li>.statues</li>
+          </ul>
         </p>
       </div>
     </div>
@@ -96,6 +103,37 @@
         <h3 class="section">bevels</h3>
         <p>
           add the .bevel class to an element
+        </p>
+      </div>
+    </div>
+
+    <div class="example bg-info neon-squares">
+      <div class="container">
+        <h3 class="section">backgrounds</h3>
+        <p>
+          these classes can be added to an element to add a background
+            <ul>
+              <li>.neon-squares</li> 
+              <li>.water</li>
+              <li>.white-marble</li>
+              <li>.neon-human</li> 
+
+            </ul>
+        </p>
+      </div>
+    </div>
+
+    <div class="example ">
+      <div class="container">
+        <h3 class="section">lists</h3>
+        <p>
+          lists
+            <ul>
+              <li>look</li> 
+              <li>like</li>
+              <li>this</li>
+              <li>qB)</li>
+            </ul>
         </p>
       </div>
     </div>
